--- a/src/components/home/Intro.css
+++ b/src/components/home/Intro.css
@@ -1,44 +1,41 @@
+.center {
+  width: 100%;
+  height: 100vh;
+ margin-top: 15%;
+display: flex;
+  justify-content: center;
+}
 
+.intro-p {
+  width: 70%;
+ 
+  display: block;
+  text-align: center;
 
-  .center {
+}
 
-    
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.char {
+  font-size: 5vmin;
+  height: 40px;
+  animation: an 1s ease-out 1 both;
+  display: inline-block;
+}
+
+@keyframes an {
+  from {
+    opacity: 0;
+    transform: perspective(500px) translate3d(-35px, -40px, -150px) rotate3d(1, -1, 0, 35deg);
   }
-  
-  p {
-    width: 70%;
-   
-    
-    display: block;
-    text-align: center;
-    margin: 0;
-    visibility: hidden; /* Initially hide the text */
+  to {
+    opacity: 1;
+    transform: perspective(500px) translate3d(0, 0, 0);
   }
-  
-  .text-draw.reveal {
-    visibility: visible; /* Show when in view */
-  }
-  
-  .char {
-    font-size: 3.5vmin;
-   
-    
-    animation: an 1s ease-out 1 both;
-    display: inline-block;
-  }
-  
-  @keyframes an {
-    from {
-      opacity: 0;
-      transform: perspective(500px) translate3d(-35px, -40px, -150px) rotate3d(1, -1, 0, 35deg);
-    }
-    to {
-      opacity: 1;
-      transform: perspective(500px) translate3d(0, 0, 0);
-    }
-  }
-  
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.reveal {
+  visibility: visible;
+}
