--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,9 @@ background: #1F1E2E;
 }
 main{
   margin-top: 0px;
-height: 110vh;
- background: linear-gradient(349deg, rgba(2,0,36,1) 0%, rgba(51,51,54,1) 26%, rgba(0,0,0,1) 100%);
- /* background: rgb(2,0,36); */
- /* background: linear-gradient(349deg, rgba(2,0,36,1) 0%, rgba(51,51,54,1) 43%, rgba(0,0,0,1) 100%); */
+/* height: 110vh; */
+ /* background: linear-gradient(349deg, rgba(2,0,36,1) 0%, rgba(51,51,54,1) 26%, rgba(0,0,0,1) 100%); */
+ background: rgb(2,0,36);
   color: white
 }
 
