--- a/src/components/home/CardStacking.css
+++ b/src/components/home/CardStacking.css
@@ -17,7 +17,11 @@
   }
   .process-item-wrapper {
    margin-top: 25px;
+
+   border: .5px solid white;
+    border-radius: 10px;
   }
+
   .label-wrapper > span {
     padding-block: 4px;
   }
@@ -29,6 +33,7 @@
   .number-item {
     width: 64px;
     height: 64px;
+    border-radius: 20px;
   }
   
   .mw-578px {
