--- a/src/components/home/CardStacking.css
+++ b/src/components/home/CardStacking.css
@@ -20,9 +20,9 @@
 
 .process-item-wrapper,
 .process-item-wrapper-last {
-    /* margin-top: 90px; */
-   
-    height: 70vh;
+    margin-top: 0px;
+    padding-bottom: 60px;   
+    height: 60vh;
     border: .5px solid white;
     border-radius: 10px;
     padding-block: 7rem;
