starting the cards, starting with hover effects

--- a/src/components/home/CardStacking.css
+++ b/src/components/home/CardStacking.css
@@ -15,24 +15,32 @@
 }
 
 .black-gradient {
-    background: linear-gradient(180deg, #151515 0%, #1c1c1c 100%);
 }
 
 .process-item-wrapper,
 .process-item-wrapper-last {
     margin-top: 0px;
-    padding-bottom: 60px;   
+    padding-bottom: 60px;
     height: 60vh;
     border: .5px solid white;
     border-radius: 10px;
     padding-block: 7rem;
     margin-right: 3px;
-
-}
-.process-item-wrapper{
-    width: 50vh;
     
 }
+
+.process-item-wrapper {
+    width: 50vh;
+    background: black
+
+
+}
+
+.process-item-wrapper:hover {
+    background-color: gray
+    
+}
+
 .process-item-wrapper-last {
     width: 150vh;
     background-color: white;
@@ -63,26 +71,9 @@
 .pin-process>.inner-div {
     overflow-x: hidden;
     width: 400%;
-    /*items * 100% */
+
     height: 100%;
     display: flex;
     flex-wrap: nowrap;
-    ;
+  
 }
-
-
-/*for the animation - END */
-
-/* Desire final positions - START */
-/* .inner-div .process-item-wrapper:nth-child(2) {
-    translate: calc(-100% + 64px) 0!important;
-  }
-  
-  .inner-div .process-item-wrapper:nth-child(3) {
-    translate: -190% 0;
-  }
-  
-  .inner-div .process-item-wrapper:nth-child(4) {
-    translate: -285% 0;
-  } */
-/* Desire final positions - END */
