--- a/src/components/AlternateOrTest/Intro2.css
+++ b/src/components/AlternateOrTest/Intro2.css
@@ -1,24 +1,23 @@
 .center {
-  width: 100%;
-  height: 75vh;
   margin-top: 15%;
-  display: flex;
-  justify-content: center;
-  word-spacing: 5px;
-
+  height: 100vh;
 }
 
-.intro-p {
+p {
   width: 80%;
-
   display: block;
-  text-align: center;
+  margin: 0;
+  visibility: hidden;
+  /* Initially hide the text */
+}
 
+.text-draw.reveal {
+  visibility: visible;
+  /* Show when in view */
 }
 
 .char {
-  font-size: 4.5vmin;
-  height: 40px;
+  font-size: 10vmin;
   animation: an 1s ease-out 1 both;
   display: inline-block;
 }
@@ -33,12 +32,4 @@
     opacity: 1;
     transform: perspective(500px) translate3d(0, 0, 0);
   }
-}
-
-.hidden {
-  visibility: hidden;
-}
-
-.reveal {
-  visibility: visible;
 }
