--- a/src/components/home/CardStackingPortfolio.css
+++ b/src/components/home/CardStackingPortfolio.css
@@ -1,28 +1,26 @@
-.py-4 {
-    padding-block: 4px !important;
-}
-
-
-.px-12 {
-    padding-inline: 12px !important;
-}
-
 
 .process-item-wrapper,
 .process-item-wrapper-last {
     margin-top: 0px;
-    padding-bottom: 60px;
+    /* padding-bottom: 60px; */
     height: 60vh;
     border: .5px solid white;
     border-radius: 10px;
-    padding-block: 7rem;
+    position: relative;
     margin-right: 3px;
+
+  
 
 }
 
 .process-item-wrapper {
     width: 50vh;
     background: black
+}
+
+.process-item-wrapper img {
+    height: 100%;
+    width: 100%
 }
 
 .process-item-wrapper:hover {
@@ -42,12 +40,6 @@
 }
 
 
-
-.number-item {
-    width: 64px;
-    height: 64px;
-    border-radius: 20px;
-}
 
 
 
