minor fix to github icon location

--- a/src/components/home/CardStackingPortfolio.css
+++ b/src/components/home/CardStackingPortfolio.css
@@ -21,7 +21,8 @@
 }
 
 .process-item-wrapper {
-    width: 40vw;
+    width: 25vw;
+
 
     background: #171717;
     background: linear-gradient(90deg, hsla(248, 21%, 15%, 1) 0%, hsla(250, 14%, 61%, 1) 100%);
@@ -31,6 +32,7 @@
     height: 100%;
     width: 100%;
     border-radius: 10px;
+    object-fit: cover;
 }
 
 .process-item-wrapper:hover {
@@ -38,7 +40,7 @@
 }
 
 .process-item-wrapper-last {
-    width: 74vw;
+    width: 76vw;
 
     
     background-color: white;
