--- a/src/components/home/ProjectCard.css
+++ b/src/components/home/ProjectCard.css
@@ -14,8 +14,8 @@
 
 .icon-hover {
     position: absolute;
-    bottom: 4vh;
-    left: 38vh; 
+    bottom: 1vw;
+    left: 1vw; 
     /* padding: 50px; */
     z-index: 999;
 
